apep_0169/v3/REPLICATION.md
# Replication Package: apep_0175

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `acs_analysis.rds`
- `acs_pums_raw.rds`
- `aggregate_results.rds`
- `coefficient_stability.rds`
- `comparison_by_type.rds`
- `covid_sensitivity.rds`
- `cps_analysis.rds`
- `cps_with_pscore.rds`
- `descriptive_stats.rds`
- `evalue_sensitivity.rds`
- `gender_educ_type_results.rds`
- `gender_results.rds`
- `gender_state_results.rds`
- `gender_summary.rds`
- `heterogeneity_educ_type.rds`
- `heterogeneity_education.rds`
- `heterogeneity_results.rds`
- `main_results.rds`
- `mjh_comparison.rds`
- `robustness_summary.rds`
- `state_results.rds`
- `state_summary_table.rds`
- `trimming_sensitivity.rds`
- `type_results.rds`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_fetch_data.R`
- `02_clean_data.R`
- `03_main_analysis.R`
- `04_robustness.R`
- `05_figures.R`
- `06_tables.R`
- `07_state_analysis.R`
- `08_gender_analysis.R`
- `09_atlas_figures.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
